# forgeagent

./: .gitignore  README.md  pyproject.toml
src/agentlib/: core.py
src/anyagent/: __init__.py  core.py
tests/: test gemini ids.py  test_agent.py  test_full.py
