[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "forgeagent"
version = "0.1.0"
description = "A lightweight, zero-dependency, provider-agnostic LLM agent with tool-calling support for Anthropic, OpenAI, Gemini, and Ollama."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Shyam Parikh", email = "shyamparikh@yahoo.com" }
]
keywords = ["llm", "agent", "tool-calling", "anthropic", "openai", "gemini", "ollama"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/Shyam-Parikh-2025/forgeagent"
Issues = "https://github.com/Shyam-Parikh-2025/forgeagent/issues"

[tool.setuptools.packages.find]
where = ["src"]
